--- a/src/PlaySelf/PlaySelf.css
+++ b/src/PlaySelf/PlaySelf.css
@@ -1,7 +1,5 @@
 .choice {
     position:absolute;
-    width: 200px;
-    height: 200px;
     top: 0;
     left: 0;
     right: 0;
@@ -10,7 +8,8 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
   }
   
   
